# raylib-gamejam-game

./: .clangd  .gitignore  CMakeLists.txt  build-desktop.sh  build-web.sh  server.py
build_desktop/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build_desktop/include/glm/: Makefile  cmake_install.cmake
build_desktop/resources/shaders/: fire.vs
build_desktop/src/: Makefile  cmake_install.cmake
src/: Makefile  launcher.cpp  minshell.html
src/engine/: current_game_info.h
src/engine/rendering/: render_funcs.h  render_system.cpp  render_system.h
src/engine/states/: game_state_controller.cpp  game_state_controller.h  gui_common.h  in_game_state.cpp  main_menu_state.cpp
src/engine/states/editor/: editor_state.cpp
src/engine/states/game/: game.cpp  game.h
src/engine/states/in_game/: element_hex_ui.cpp  in_game_common.cpp  in_game_common.h  in_game_lifecycle.cpp  in_game_render.cpp  in_game_update.cpp
src/resources/shaders/: fire.fs
src/utils/: math_helpers.h
